force-app/main/default/objects/Case_Navigation_RecordType__mdt/Case_Navigation_RecordType__mdt.object-meta.xml
<CustomObject>
    <label>Case Navigation RecordType</label>
    <pluralLabel>Case Navigation RecordTypes</pluralLabel>
</CustomObject>