force-app/main/default/objects/Case_Navigation_RecordType__mdt/fields/Available_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Available_Profiles__c</fullName>
    <defaultValue>&quot;Paccar Customer Community Plus Login&quot;</defaultValue>
    <description>Semi colon separated list of profile names that have access to the recordtype navigation item for the support community.</description>
    <label>Available Profiles</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>