force-app/main/default/objects/Case_Navigation_RecordType__mdt/fields/Case_Navigation_Item__c.field-meta.xml
<CustomField>
    <fullName>Case_Navigation_Item__c</fullName>
    <label>Case Navigation Item</label>
    <referenceTo>Case_Navigation__mdt</referenceTo>
    <relationshipLabel>Case Navigation RecordTypes</relationshipLabel>
    <relationshipName>Case_Navigation_RecordTypes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>