force-app/main/default/objects/Case_Navigation_RecordType__mdt/fields/RecordType_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordType_DeveloperName__c</fullName>
    <label>RecordType DeveloperName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>