force-app/main/default/objects/Case_Navigation_RecordType__mdt/fields/Sort_Order_2__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sort Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>