force-app/main/default/objects/Case_Navigation_RecordType__mdt/fields/Title_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Title_Custom_Label__c</fullName>
    <description>Custom label name that contains the translated text.</description>
    <label>Title Custom Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>