force-app/main/default/objects/Case_Navigation_RecordType__mdt/listViews/Navigation.listView-meta.xml
<ListView>
    <fullName>Navigation</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Case_Navigation_Item__c</columns>
    <columns>Available_Profiles__c</columns>
    <columns>Sort_Order_2__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>Navigation</label>
    <language>en_US</language>
</ListView>